<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/setwallpaper_dialog_bg"
    android:orientation="vertical" >

    <TextView 
        android:text="@string/displaymode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/setwall_dialog_itme_margin_top">

        <TextView
            android:id="@+id/btn_normal"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
            android:text="@string/normal"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:drawableTop="@drawable/normal"/>

        <TextView
            android:id="@+id/btn_stretch"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:gravity="center_horizontal"
            android:text="@string/stretch"
            android:textSize="20sp"
            android:drawableTop="@drawable/stretch_dwn"/>
        
        <TextView
            android:id="@+id/btn_cut"
            android:layout_marginLeft="50dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
            android:text="@string/cut" 
            android:textSize="20sp"
            android:drawableTop="@drawable/cut"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_setwallpaper_confirm"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/setwallpaper_ok_selector"
        	android:textSize="18sp"
        	android:text="@string/ok"
             />

        <Button
            android:id="@+id/btn_setwallpaper_cancel" 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="50dp"
        	android:text="@string/cancel"
        	android:textSize="18sp"
        	android:background="@drawable/setwallpaper_ok_selector"/>
    </LinearLayout>

</FrameLayout>